--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -4,6 +4,11 @@
     "repositoryName": "hubpress.io",
     "branch": "gh-pages"
   },
+  "site": {},
+  "socialnetwork": {
+    "email": "croberts@redhat.com",
+    "github": "crobby"
+  },
   "theme": {
     "name": "ichi"
   }
