--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -4,7 +4,12 @@
     "repositoryName": "hubpress.io",
     "branch": "gh-pages"
   },
-  "site": {},
+  "site": {
+    "title": "Making sense of it",
+    "description": "I'll talk about all sorts of things related to container-related computing",
+    "postsPerPage": "5",
+    "googleAnalytics": "UA-91139231-1"
+  },
   "socialnetwork": {
     "email": "croberts@redhat.com",
     "github": "crobby"
